# krishi-bondhu

./: .dockerignore  .env.example  .gitattributes  .gitignore  .vercelignore  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE.md  DEPLOY_NOW.md  Dockerfile  FEATURE_COMPLETION_REPORT.md  FIX_VERIFICATION_REPORT.md  IMPLEMENTATION_PLAN.md  PHASE_1_FEATURE_DESIGN_DOCUMENT.md  PHASE_2_TECHNOLOGY_SELECTION.md  PROJECT_AUDIT_REPORT.md  README.md  REQUIREMENTS_VERIFICATION.md  VERCEL_DEPLOYMENT_GUIDE.md  VERCEL_ERROR_PREVENTION.md  VERCEL_QUICK_START.md  backend.db  docker-compose.yml  example.env  railway.json  railway.toml  vercel.json
backend/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  farmdb.db  index.py  integration_tests.py  pyproject.toml  requirements-all.txt  requirements-heavy.txt  requirements-lock.txt  requirements.txt  setup.bat  test_audio_upload.py  test_community_tools.py  test_emergency_tools.py  test_gemini_direct.py  test_gemini_integration.py  test_greeting.py  test_irrigation_tools.py  test_marketplace_tools.py  vercel.json
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_add_fields.py  0003_add_farm_diary.py  0004_add_tips.py  0005_add_soil_test.py  0006_add_market_prices.py  0007_create_postgis_pgvector_extensions.py  0008_create_community_qa_tables.py  0009_create_marketplace_tables.py  0010_create_emergency_tables.py  0011_create_sqlite_fallback_tables.py  0012_community_posts_discovery.py  56bd0a562c28_add_username_and_password_to_users.py
backend/app/: __init__.py  db.py  main.py  storage.py
backend/app/agents/: agronomist_expert.py  alert_advisor.py  bengali_interpreter.py  community_connector.py  disease_analyst.py  emergency_response.py  farm_manager.py  finance_advisor.py  market_advisor.py  procurement_advisor.py  soil_scientist.py  sustainability_coach.py  traceability_manager.py  water_advisor.py  weather_advisor.py  yield_planner.py
backend/app/api/: __init__.py  routes.py  utils.py
backend/app/config/: agent_llm.py  agents.yaml  finance_data.json  llm_factory.py  model_config.py  tasks.yaml
backend/app/core/: dependencies.py  exceptions.py  logging.py  prompts.py  security.py
backend/app/crews/: krishi_crew.py
backend/app/farm_agent/: __init__.py  langgraph_app.py
backend/app/llm/: __init__.py  provider.py  token_utils.py
backend/app/models/: __init__.py  community_models.py  db_models.py  emergency_models.py  marketplace_models.py  production_models.py  vision.py
backend/app/seed/: __init__.py  phase3_seed.py
backend/app/services/: __init__.py  agronomy_service.py  alert_service.py  audio.py  barcode_service.py  community_service.py  embedding_service.py  emergency_service.py  finance_service.py  geospatial_service.py  llm.py  market_service.py  marketplace_service.py  memory.py  ocr_service.py  recommendation_service.py  sms_provider.py  soil_service.py  sustainability_service.py  task_worker.py  traceability_service.py  tts.py  vision_service.py  weather.py  weather_service.py  yield_service.py
backend/app/tools/: __init__.py  alert_tool.py  community_tool.py  emergency_tool.py  finance_tool.py  finance_tools.py  irrigation_tool.py  market_tool.py  market_tools.py  marketplace_tool.py  receipt_tool.py  soil_tool.py  soil_tools.py  vision_tool.py  weather_tool.py  weather_tools.py
backend/app/utils/: __init__.py  pdf_generator.py  profile_context.py  vector_utils.py
backend/models/: yield_model.pkl
backend/scratch/: inspect_routes.py
backend/scripts/: seed_experts.py  train_market_model.py  train_yield_model.py
backend/static/: index.html  manifest.json  manifest.webmanifest  sw.js
backend/static/assets/: ChatPage-Cj7RFLrz.js  CommunityPage-Ce6AMbSr.js  DiaryPage-OYYFiMLl.js  EmergencyPage-DJ1z2Emq.js  FinancePage-DgwhMhhf.js  LandingPage-ZgXUagt7.js  MarketPage-YNhEsH7o.js  (+18 more)
backend/tests/: conftest.py  test_agent_fallbacks.py  test_api_endpoints.py  test_api_health.py  test_carbon_calculator.py  test_credit_scoring.py  test_diary_tools.py  test_integration_features.py  test_market_prices.py  test_market_tools.py  test_phase3_services.py  test_tools_health.py
(+101 files in other folders)
