[project]
name = "krishibondhu-backend"
version = "0.2.0"
description = "Multi-agent agricultural assistant using CrewAI and FastAPI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.2.1",
    "aiofiles>=23.2.1",
    "pydantic>=2.0.0",
    
    # AI & Agents
    "crewai==0.28.8",
    "crewai-tools==0.1.6",
    "chromadb>=0.4.22",
    "google-generativeai>=0.4.0",
    "langchain-google-genai",
    "langchain-huggingface",
    "langchain-groq",
    "transformers>=4.37.0",
    "torch>=2.0.0",
    "Pillow>=10.2.0",
    "accelerate>=0.29.0",
    "bitsandbytes>=0.43.0",
    "soundfile>=0.12.1",
    "librosa>=0.10.1",
    
    # Database
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "aiosqlite>=0.20.0",
    
    # Audio/Misc
    "gtts>=2.5.0",
    "cachetools>=5.3.2",
    
    # KrishiBondhu Phase 2 Features
    "apscheduler>=3.10.4",
    "beautifulsoup4>=4.12.3",
    "pandas>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "httpx>=0.26.0",
    "black>=24.1.0",
    "isort>=5.13.2"
]
